ash-code/tui/src/app/snapshots/app__mode_tests__inline_scroll_with_shared_draft.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
    ▄  ▄     Ash Code v0.1.0                      
  ▗█▛██▜█▖   Automatic model · Access unknown     
  ▝▜████▛▘   .                                    
    ▝  ▘                                          
                                                  
● message 00                                      
                                                  
           Ctrl+End to jump to bottom ↓           
  Queue 1: queued message · next                  
                                                  
──────────────────────────────────────────────────
> shared draft                                    
──────────────────────────────────────────────────
                                                  
  ⏸ ask permissions on
