ash-code/tui/src/app/snapshots/app__mode_tests__panel_transferred_to_inline.snap
---
source: ash-code/tui/src/app/mode_tests.rs
assertion_line: 94
expression: render(&app)
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
─ Help ───────────────────────────────────────────
                                                  
   Commands                                       
  First                                           
> Second                                          
                                                  
  Tab/Shift+Tab to switch  ·  Esc to close
