ash-code/tui/src/app/snapshots/app__mode_tests__restored_fullscreen_transcript_focus.snap
---
source: ash-code/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                          [— / —] [Dashboard]  
                                                  
● focus message 05                                
                                                  
● focus message 06                                
                                                  
● focus message 07                                
                                                  
             Jump to bottom (click) ↓             
  Queue 1: queued message · next                  
                                                  
  ╭────────────────────────────────────────────╮  
  │ > Build anything                           │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Space to expand · Esc to return to input
